--- a/coal.html
+++ b/coal.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Power Plant Emissions Calculator</title>
+    <h1> Demonstration of a method to estimate emissions from a coal thermal power plant </h1>
+    <h2> Built by UrbanEmissions</h2>
     <style>
         body {
             font-family: 'Arial', sans-serif;
